data/derived/comb/progs/unify/prog6940.ml.out
Characters 46-50:
  let rec funt = fun x -> (funt, f b = b) 
                           ^^^^
Error: This expression has type 'a -> 'b * 'c
       but an expression was expected of type 'b
       The type variable 'b occurs inside 'a -> 'b * 'c
